# pomar

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  README.md  SetCompilerWarningAll.cmake  conanfile.py  main.cpp  pomar.code-workspace
catch/src/AdjacencyRelation/Image2D/: Image2DAdjacencyRelationByTranslation.cpp
docs/: conf.py  config.doxygen  index.rst  make.bat
docs/_build/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree
docs/_build/_sources/: index.rst.txt
include/: AdjacencyRelaction.hpp
include/AdjacencyRelation/: AdjacencyRelation.hpp
include/AdjacencyRelation/Image2D/: Image2DAdjacencyRelationByTranslating.hpp
include/MorphologicalTree/: MorphologicalTree.hpp  MorphologicalTreeBuilder.hpp
include/pomar/AdjacencyRelation/: Adjacency.hpp  AdjacencyByTranslating.hpp  AdjacencyRelation.hpp
include/pomar/AdjacencyRelation/Image2D/: Image2DAdjacencyRelationByTranslating.hpp
include/pomar/Attribute/: AttributeCollection.hpp  AttributeComputer.hpp  AttributeComputerBasic.hpp  AttributeComputerQuads.hpp  BasicAttributeComputer.hpp
include/pomar/ComponentGraph/: ComponentGraph.hpp
include/pomar/ComponentTree/: CTBuilder.hpp  CTMeta.hpp  CTSorter.hpp  CTree.hpp  MorphologicalTreeBuilder.hpp
include/pomar/Core/: CRTP.hpp  PixelIndexer.hpp  Sort.hpp
include/pomar/Math/: Point.hpp
include/pomar/MorphologicalTree/: MorphologicalTree.hpp  MorphologicalTreeBuilder.hpp
src/AdjacencyRelation/: Adjacency.cpp  AdjacencyByTranslating.cpp  AdjacencyRelation.cpp
src/AdjacencyRelation/Image2D/: Image2DAdjacencyRelationByTranslating.cpp
src/Attribute/: AttributeCollection.cpp
src/ComponentTree/: CTBuilder.cpp  CTMeta.cpp
src/Core/: PixelIndexer.cpp
src/Math/: Point.cpp
test/: CMakeLists.txt
test/src/AdjacencyRelation/: AdjacencyByTranslating2D.cpp
test/src/AdjacencyRelation/Image2D/: Image2DAdjacencyRelationByTranslating.cpp
test/src/Attribute/: AttributeCollection.cpp  AttributeComputer.cpp  AttributeComputerQuads.cpp  BasicAttributeComputer.cpp
test/src/ComponentTree/: CTSorter.cpp  CTree.cpp  MaxTreeBuilder.cpp
test/src/Core/: PixelIndexer.cpp  Sort.cpp
test/src/Math/: Point.cpp
test/src/MorphologicalTree/: MaxTreeBuilder.cpp  MorphologicalTree.cpp
